apps/base/infra-docker-registry/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-docker-registry
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
