apps/base/infra-docker-registry/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: docker-registry
spec:
  ports:
    - port: 443
      name: https
      targetPort: https
  selector:
    app.kubernetes.io/name: docker-registry
    app.kubernetes.io/component: registry
